<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#121212"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stage"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:background="#333"
        android:padding="10dp"/>

    <GridLayout
        android:id="@+id/grid"
        android:columnCount="4"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_price_format"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/confirm_booking"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</LinearLayout>
